# moss

./: .gitignore  .pre-commit-config.yaml  README.md  implementation_plan.md  pyproject.toml  solution_design.md
moss/: manage.py
moss/moss/: asgi.py  settings.py  urls.py
object_store/: apps.py
src/moss/: settings.py  urls.py  wsgi.py
src/moss/store/: admin.py  apps.py  jwt.py  models.py  perms.py  serializers.py  service.py  views.py
src/moss/store/management/commands/: createsupertenant.py  createusertoken.py
src/moss/store/migrations/: 0001_initial.py  0002_remove_file_size.py  0003_remove_file_s3_key.py
tests/: test_fileops.py
