[project]
name = "moss"
version = "0.1.0"
description = "Managed Object Store by SmiTTY"
authors = [
    {name = "Michael A. Smith",email = "michael@smith-li.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "djangorestframework (>=3.15.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
