[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[project]
authors = [
  {name = "Michael A. Smith", email = "michael@smith-li.com"}
]
dependencies = [
  "djangorestframework (>=3.15.2,<4.0.0)",
  "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
  "boto3 (>=1.37.15,<2.0.0)"
]
description = "Managed Object Store by SmiTTY"
name = "moss"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"
